force-app/main/default/objects/Z2Entitlement__c/Z2Entitlement__c.object-meta.xml
<CustomObject>
    <label>Z2Entitlement</label>
    <nameField>
        <label>EntitlementID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z2Entitlements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>