force-app/main/default/objects/Z2Entitlement__c/fields/Offering__c.field-meta.xml
<CustomField>
    <fullName>Offering__c</fullName>
    <label>Offering</label>
    <length>100</length>
    <type>Text</type>
</CustomField>